--- a/about.html
+++ b/about.html
@@ -74,8 +74,13 @@
             <div class="feat-text">
               <div class="topic">
                 <h3>
-                  Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                  qui officia deserunt mollit anim id est laborum.
+                  At OOTB, we understand that every business is unique and faces
+                  its own set of challenges. That's why we offer a range of
+                  customized services to meeet the specific needs of our
+                  clients. Whether you need help with branding, digital
+                  marketing, social media management content creation,
+                  advertising or design of team of experienced marketers and
+                  designers here to help
                 </h3>
               </div>
 
@@ -86,21 +91,20 @@
 
                 <div class="col-lg-8 col-sm-12">
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum.
+                    Our goal is to be a leading marketing and branding agency in
+                    Nigeria and we are committed to achieving this by delivering
+                    exceptional service and results to our clients. We believe
+                    that staying up-to-date with the latest trends and
+                    technologies, we can offer innovative solutions that help
+                    our clients succeed in a rapidly market
                   </p>
 
                   <p>
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                    irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu fugiat nulla pariatur.
+                    We are confident that our ideas, passion, committed to
+                    excellence will set us apart from the competition. Our aim
+                    is to conquer the Nigeria market by Providing exceptional
+                    value to our clients and building long term relationships
+                    based on trust, integrity and results
                   </p>
                 </div>
               </div>
@@ -129,22 +133,33 @@
               <div class="card">
                 <img src="Img/profile1.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Mitchel Phelps</h5>
-                  <p class="card-text">CEO</p>
+                  <h5 class="card-title">Chima Ifeji</h5>
+                  <p class="card-text">Creative Director</p>
                 </div>
               </div>
               <div class="card">
-                <img src="Img/profile3.jpg" class="card-img-top" alt="..." />
+                <img src="Img/Taiye-Abiri.png" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Dele Salako</h5>
-                  <p class="card-text">Manager Partner</p>
+                  <h5 class="card-title">Taiye Abiri</h5>
+                  <p class="card-text">Managing Partner</p>
                 </div>
               </div>
               <div class="card">
                 <img src="Img/profile2.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Todd Braxton</h5>
+                  <h5 class="card-title">Jide Ogunnoiki</h5>
                   <p class="card-text">Managing Strategist</p>
+                </div>
+              </div>
+              <div class="card">
+                <img
+                  src="Img/Samuel-Olowookere.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Samuel Olowookere</h5>
+                  <p class="card-text">Graphics Designer</p>
                 </div>
               </div>
             </div>
