--- a/about.html
+++ b/about.html
@@ -131,21 +131,21 @@
             </div>
             <div class="card-group">
               <div class="card">
-                <img src="Img/profile1.jpg" class="card-img-top" alt="..." />
+                <img src="Img/Chima.jfif" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Chima Ifeji</h5>
                   <p class="card-text">Creative Director</p>
                 </div>
               </div>
               <div class="card">
-                <img src="Img/Taiye-Abiri.png" class="card-img-top" alt="..." />
+                <img src="Img/Taiye-Abiri.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Taiye Abiri</h5>
                   <p class="card-text">Managing Partner</p>
                 </div>
               </div>
               <div class="card">
-                <img src="Img/profile2.jpg" class="card-img-top" alt="..." />
+                <img src="Img/Jide.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <h5 class="card-title">Jide Ogunnoiki</h5>
                   <p class="card-text">Managing Strategist</p>
