--- a/case.html
+++ b/case.html
@@ -84,7 +84,7 @@
 
               <div class="col-lg-4 col-sm-12">
                 <div class="case-logo">
-                  <img src="Img/logo1.png" alt="" />
+                  <img src="Img/Case Trifecta.png" alt="" />
                 </div>
               </div>
             </div>
@@ -93,7 +93,7 @@
             <div class="row" id="column2">
               <div class="col-lg-4 col-sm-12">
                 <div class="case-logo">
-                  <img src="Img/logo2.png" alt="" />
+                  <img src="Img/Case-TPRCC2.jpg" alt="" />
                 </div>
               </div>
 
@@ -124,7 +124,7 @@
 
               <div class="col-lg-4 col-sm-12">
                 <div class="case-logo">
-                  <img src="Img/logo6.png" alt="" />
+                  <img src="Img/Case Salberg.png" alt="" />
                 </div>
               </div>
             </div>
@@ -133,7 +133,7 @@
             <div class="row" id="column2">
               <div class="col-lg-4 col-sm-12">
                 <div class="case-logo">
-                  <img src="Img/logo8.png" alt="" />
+                  <img src="Img/Case-Eagle2.jpg" alt="" />
                 </div>
               </div>
 
@@ -161,13 +161,8 @@
             <h5>Contact Us</h5>
             <h1>Let's talk</h1>
             <div class="footer-icons">
-              <a href=""><i class="fab fa-facebook-f"></i>Facebook</a>
-              <a href=""
-                ><i class="fab fa-pinterest-p" aria-hidden="true"></i
-                >Pinterest</a
-              >
-              <a href=""
-                ><i class="fab fa-behance" aria-hidden="true"></i>Behance</a
+              <a href="https://www.instagram.com/studioootb/"
+                ><i class="fab fa-instagram"></i>Instagram</a
               >
             </div>
           </div>
@@ -175,7 +170,7 @@
           <div class="col-lg-4 col-sm-10">
             <div class="footer-lines">
               <p>t: +2348082938397</p>
-              <p>e: contact@info.com</p>
+              <p>e: digitalcampaigns@ootb.studio</p>
               <p>a: Lagos, Nigeria</p>
             </div>
 
