--- a/features.html
+++ b/features.html
@@ -286,13 +286,8 @@
             <h5>Contact Us</h5>
             <h1>Let's talk</h1>
             <div class="footer-icons">
-              <a href=""><i class="fab fa-facebook-f"></i>Facebook</a>
-              <a href=""
-                ><i class="fab fa-pinterest-p" aria-hidden="true"></i
-                >Pinterest</a
-              >
-              <a href=""
-                ><i class="fab fa-behance" aria-hidden="true"></i>Behance</a
+              <a href="https://www.instagram.com/studioootb/"
+                ><i class="fab fa-instagram"></i>Instagram</a
               >
             </div>
           </div>
@@ -300,7 +295,7 @@
           <div class="col-lg-4 col-sm-10">
             <div class="footer-lines">
               <p>t: +2348082938397</p>
-              <p>e: contact@info.com</p>
+              <p>e: digitalcampaigns@ootb.studio</p>
               <p>a: Lagos, Nigeria</p>
             </div>
 
