--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
     />
     <!-- css style -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- favicon -->
+    <link rel="icon" href="Img/favicon.ico" type="image/x-icon" />
     <title>Out of box</title>
   </head>
   <body>
     <!-- header -->
     <section id="header">
-      <a href="#"><img src="Img/OOTB-04.png" class="logo" alt="" /></a>
+      <a href="index.html"><img src="Img/OOTB-04.png" class="logo" alt="" /></a>
       <div>
         <ul id="navbar">
           <li><a class="active" href="index.html">Home</a></li>
@@ -163,7 +165,7 @@
 
               <div class="col-lg-4 col-sm-12">
                 <div class="about-img">
-                  <img src="Img/banner1.jpg" alt="" />
+                  <img src="Img/Strategy_and_Planning.jpeg" alt="" />
                 </div>
               </div>
             </div>
@@ -172,7 +174,7 @@
             <div class="row" id="column2">
               <div class="col-lg-4 col-sm-12">
                 <div class="about-img">
-                  <img src="Img/banner1.jpg" alt="" />
+                  <img src="Img/Creative_Execution.png" alt="" />
                 </div>
               </div>
 
@@ -217,7 +219,7 @@
 
               <div class="col-lg-4 col-sm-12">
                 <div class="about-img">
-                  <img src="Img/banner1.jpg" alt="" />
+                  <img src="Img/support.jpeg" alt="" />
                 </div>
               </div>
             </div>
@@ -362,7 +364,7 @@
             <div class="clients-title">
               <h1>Our clients</h1>
               <div class="clients-link">
-                <a href="#">
+                <a href="about.html">
                   <button class="normal">
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                   </button>
@@ -373,25 +375,25 @@
             <div class="logo">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/logo4.png" alt="" />
+                  <img src="Img/Ajinomoto_global_logo.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/logo2.png" alt="" />
+                  <img src="Img/IDL Logo.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/logo8.png" alt="" />
+                  <img src="Img/Salberg Logo (1).png" alt="" />
                 </div>
               </div>
 
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/logo1.png" alt="" />
+                  <img src="Img/salt_lagos.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/logo5.png" alt="" />
+                  <img src="Img/trifecta_logo.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/logo6.png" alt="" />
+                  <img src="Img/logo_green.png" alt="" />
                 </div>
               </div>
             </div>
@@ -408,13 +410,8 @@
             <h5>Contact Us</h5>
             <h1>Let's talk</h1>
             <div class="footer-icons">
-              <a href=""><i class="fab fa-facebook-f"></i>Facebook</a>
-              <a href=""
-                ><i class="fab fa-pinterest-p" aria-hidden="true"></i
-                >Pinterest</a
-              >
-              <a href=""
-                ><i class="fab fa-behance" aria-hidden="true"></i>Behance</a
+              <a href="https://www.instagram.com/studioootb/"
+                ><i class="fab fa-instagram"></i>Instagram</a
               >
             </div>
           </div>
@@ -422,7 +419,7 @@
           <div class="col-lg-4 col-sm-12">
             <div class="footer-lines">
               <p>t: +2348082938397</p>
-              <p>e: contact@info.com</p>
+              <p>e: digitalcampaigns@ootb.studio</p>
               <p>a: Lagos, Nigeria</p>
             </div>
 
