--- a/contact.html
+++ b/contact.html
@@ -110,9 +110,7 @@
               <div class="col-lg-5 col-sm-12">
                 <div class="contact-info">
                   <div class="contact-header">
-                    <h4>
-                      Nullam ac urna eu felis dapibus condimentum sit amet.
-                    </h4>
+                    <h4>We'd love to talk. Let's create something fun</h4>
                   </div>
                   <div class="contact-lines">
                     <ul>
@@ -120,7 +118,10 @@
                         <i class="fa fa-phone" aria-hidden="true"></i
                         >+2348082938397
                       </li>
-                      <li><i class="fa fa-envelope"></i>contact@gmail.com</li>
+                      <li>
+                        <i class="fa fa-envelope"></i
+                        >digitalcampaigns@ootb.studio
+                      </li>
                       <li><i class="fa fa-map-marker"></i>Lagos, Nigeria</li>
                     </ul>
                   </div>
@@ -140,21 +141,23 @@
             <h5>Contact Us</h5>
             <h1>Let's talk</h1>
             <div class="footer-icons">
-              <a href=""><i class="fab fa-facebook-f"></i>Facebook</a>
-              <a href=""
+              <a href="https://www.instagram.com/studioootb/"
+                ><i class="fab fa-instagram"></i>Instagram</a
+              >
+              <!-- <a href=""
                 ><i class="fab fa-pinterest-p" aria-hidden="true"></i
                 >Pinterest</a
               >
               <a href=""
                 ><i class="fab fa-behance" aria-hidden="true"></i>Behance</a
-              >
+              > -->
             </div>
           </div>
 
           <div class="col-lg-4 col-sm-10">
             <div class="footer-lines">
               <p>t: +2348082938397</p>
-              <p>e: contact@info.com</p>
+              <p>e: digitalcampaigns@ootb.studio</p>
               <p>a: Lagos, Nigeria</p>
             </div>
 
