--- a/about.html
+++ b/about.html
@@ -183,13 +183,13 @@
             <div class="logo" style="margin-top: 70px">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/logo4.png" alt="" />
+                  <img src="Img/IDL Logo.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/logo2.png" alt="" />
+                  <img src="Img/Ajinomoto_global_logo.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/logo8.png" alt="" />
+                  <img src="Img/trifecta_logo.png" alt="" />
                 </div>
               </div>
             </div>
