--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
           <div class="col-10">
             <div class="card-group">
+              <!-- 1st card -->
               <div class="card">
                 <div class="card-body">
                   <h1 class="card-title">Branding Services</h1>
@@ -81,6 +82,7 @@
                   </ul>
                 </div>
               </div>
+              <!-- 2nd card -->
               <div class="card">
                 <div class="card-body">
                   <h1 class="card-title">Design Services</h1>
@@ -91,6 +93,7 @@
                   </ul>
                 </div>
               </div>
+              <!-- 3rd card -->
               <div class="card">
                 <div class="card-body">
                   <h1 class="card-title">Digital Marketing</h1>
@@ -106,6 +109,7 @@
                   </ul>
                 </div>
               </div>
+              <!-- 4th card -->
               <div class="card">
                 <div class="card-body">
                   <h1 class="card-title">Additional Services</h1>
