--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
     />
     <!-- css style -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- favicon -->
+    <link rel="icon" href="Img/favicon.ico" type="image/x-icon" />
     <title>Out of box</title>
   </head>
   <body>
