--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
                   <img src="Img/IDL Logo.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/Ajinomoto_global_logo.png" alt="" />
+                  <img src="Img/ajinomoto.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
                   <img src="Img/trifecta_logo.png" alt="" />
