--- a/case.html
+++ b/case.html
@@ -25,8 +25,6 @@
     />
     <!-- css style -->
     <link rel="stylesheet" href="css/style.css" />
-    <!-- favicon -->
-    <link rel="icon" href="Img/favicon.ico" type="image/x-icon" />
     <title>Out of box</title>
   </head>
   <body>
@@ -86,7 +84,7 @@
 
               <div class="col-lg-4 col-sm-12">
                 <div class="case-logo">
-                  <img src="Img/Case Trifecta.png" alt="" />
+                  <img src="Img/ajinomoto.png" alt="" />
                 </div>
               </div>
             </div>
@@ -95,7 +93,7 @@
             <div class="row" id="column2">
               <div class="col-lg-4 col-sm-12">
                 <div class="case-logo">
-                  <img src="Img/Case-TPRCC2.jpg" alt="" />
+                  <img src="Img/Salberg Logo (1).png" alt="" />
                 </div>
               </div>
 
@@ -126,7 +124,7 @@
 
               <div class="col-lg-4 col-sm-12">
                 <div class="case-logo">
-                  <img src="Img/Case Salberg.png" alt="" />
+                  <img src="Img/trifecta_logo.png" alt="" />
                 </div>
               </div>
             </div>
@@ -135,7 +133,7 @@
             <div class="row" id="column2">
               <div class="col-lg-4 col-sm-12">
                 <div class="case-logo">
-                  <img src="Img/Case-Eagle2.jpg" alt="" />
+                  <img src="Img/salt_lagos.png" alt="" />
                 </div>
               </div>
 
@@ -163,8 +161,13 @@
             <h5>Contact Us</h5>
             <h1>Let's talk</h1>
             <div class="footer-icons">
-              <a href="https://www.instagram.com/studioootb/" target="_blank"
-                ><i class="fab fa-instagram"></i>Instagram</a
+              <a href=""><i class="fab fa-facebook-f"></i>Facebook</a>
+              <a href=""
+                ><i class="fab fa-pinterest-p" aria-hidden="true"></i
+                >Pinterest</a
+              >
+              <a href=""
+                ><i class="fab fa-behance" aria-hidden="true"></i>Behance</a
               >
             </div>
           </div>
@@ -172,7 +175,7 @@
           <div class="col-lg-4 col-sm-10">
             <div class="footer-lines">
               <p>t: +2348082938397</p>
-              <p>e: digitalcampaigns@ootb.studio</p>
+              <p>e: contact@info.com</p>
               <p>a: Lagos, Nigeria</p>
             </div>
 
