--- a/index.html
+++ b/index.html
@@ -262,22 +262,22 @@
         <div class="row">
           <div class="column">
             <div class="photo">
-              <img src="Img/gallery5a.jpg" alt="" />
+              <img src="Img/Case Trifecta.png" alt="" />
             </div>
             <div class="photo">
-              <img src="Img/gallery2a.jpg" alt="" />
-            </div>
-          </div>
-
-          <div class="column">
-            <div class="photo">
-              <img src="Img/gallery1.jpg" alt="" />
+              <img src="Img/Case-Salberg.jpg" alt="" />
             </div>
           </div>
 
           <div class="column">
             <div class="photo">
-              <img src="Img/gallery3a.jpg" alt="" />
+              <img src="Img/Case Eagle.png" alt="" />
+            </div>
+          </div>
+
+          <div class="column">
+            <div class="photo">
+              <img src="Img/Case TPRCC.png" alt="" />
             </div>
           </div>
         </div>
@@ -379,10 +379,10 @@
             <div class="logo">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/Ajinomoto_global_logo.png" alt="" />
+                  <img src="Img/IDL Logo.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/IDL Logo.png" alt="" />
+                  <img src="Img/salt_lagos.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
                   <img src="Img/Salberg Logo (1).png" alt="" />
@@ -391,13 +391,13 @@
 
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/salt_lagos.png" alt="" />
-                </div>
-                <div class="col-lg-4 col-sm-12">
                   <img src="Img/trifecta_logo.png" alt="" />
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                  <img src="Img/logo_green.png" alt="" />
+                  <img src="Img/ajinomoto.png" alt="" />
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                  <img src="Img/tprcc.png" alt="" />
                 </div>
               </div>
             </div>
