--- a/case.html
+++ b/case.html
@@ -25,12 +25,14 @@
     />
     <!-- css style -->
     <link rel="stylesheet" href="css/style.css" />
-    <title>Out of box</title>
+    <!-- favicon -->
+    <link rel="icon" href="Img/favicon.ico" type="image/x-icon" />
+    <title>Out of the box</title>
   </head>
   <body>
     <!-- header -->
     <section id="header">
-      <a href="#"><img src="Img/OOTB-04.png" class="logo" alt="" /></a>
+      <a href="index.html"><img src="Img/OOTB-04.png" class="logo" alt="" /></a>
       <div>
         <ul id="navbar">
           <li><a href="index.html">Home</a></li>
