--- a/features.html
+++ b/features.html
@@ -25,14 +25,15 @@
     />
     <!-- css style -->
     <link rel="stylesheet" href="css/style.css" />
+
     <!-- favicon -->
     <link rel="icon" href="Img/favicon.ico" type="image/x-icon" />
-    <title>Out of box</title>
+    <title>Out of the box</title>
   </head>
   <body>
     <!-- header -->
     <section id="header">
-      <a href="#"><img src="Img/OOTB-04.png" class="logo" alt="" /></a>
+      <a href="index.html"><img src="Img/OOTB-04.png" class="logo" alt="" /></a>
       <div>
         <ul id="navbar">
           <li><a href="index.html">Home</a></li>
