--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- favicon -->
     <link rel="icon" href="Img/favicon.ico" type="image/x-icon" />
-    <title>Out of box</title>
+    <title>Out of the box</title>
   </head>
   <body>
     <!-- header -->
