--- a/contact.html
+++ b/contact.html
@@ -172,11 +172,11 @@
         <div class="copyright">
           <div class="row">
             <div class="col-lg-9 col-sm-10">
-              <p>Copyright @ Out of box Agency</p>
+              <p>Copyright @ Out of the box Agency</p>
             </div>
 
             <div class="col-lg-3 col-sm-10">
-              <p>Powered by Out of box Agency</p>
+              <p>Powered by Out of the box Agency</p>
             </div>
           </div>
         </div>
