--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="row">
           <div class="column">
             <div class="photo">
-              <img src="Img/Case Trifecta.png" alt="" />
+              <img src="Img/Case-Trifecta.jpg" alt="" />
             </div>
             <div class="photo">
               <img src="Img/Case-Salberg.jpg" alt="" />
@@ -436,11 +436,11 @@
         <div class="copyright">
           <div class="row">
             <div class="col-lg-9 col-sm-12">
-              <p>Copyright @ Out of box Agency</p>
+              <p>Copyright @ Out of the box Agency</p>
             </div>
 
             <div class="col-lg-3 col-sm-12">
-              <p>Powered by Out of box Agency</p>
+              <p>Powered by Out of the box Agency</p>
             </div>
           </div>
         </div>
