--- a/case.html
+++ b/case.html
@@ -206,6 +206,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="Js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
