--- a/index.html
+++ b/index.html
@@ -452,6 +452,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="Js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
