--- a/about.html
+++ b/about.html
@@ -248,6 +248,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="Js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
