--- a/features.html
+++ b/features.html
@@ -327,6 +327,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="Js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
